[gd_scene load_steps=19 format=3 uid="uid://6evi5sfmtnj7"]

[ext_resource type="Script" uid="uid://cxn33e8bbygnm" path="res://Scripts/Levels and Main Menu/test_scene.gd" id="1_u63wg"]
[ext_resource type="Texture2D" uid="uid://b7ltvj1rvbcyl" path="res://art/boss/boss2/RyhtmBackground.png" id="2_4m670"]
[ext_resource type="PackedScene" uid="uid://bsw88bn1riogf" path="res://Scenes/Bosses/boss2/KeyListener.tscn" id="2_q2to2"]
[ext_resource type="Texture2D" uid="uid://1rmuy40qo006" path="res://art/Player/mainCharacter.png" id="2_r60uj"]
[ext_resource type="Script" uid="uid://bn441iwruhew4" path="res://Scripts/Bosses/boss2/playerRythm.gd" id="3_uxruc"]
[ext_resource type="PackedScene" uid="uid://dhdoytjacbi3" path="res://Scenes/Bosses/boss2/Boss2 UI.tscn" id="4_n5cy7"]
[ext_resource type="PackedScene" uid="uid://deytoupfm2vp2" path="res://Scenes/Bosses/boss2/levelEditor.tscn" id="6_n5cy7"]
[ext_resource type="PackedScene" uid="uid://g4ykkl16skln" path="res://Scenes/UI/game_ui.tscn" id="7_u63wg"]
[ext_resource type="Texture2D" uid="uid://cag75vletv7ha" path="res://art/boss/boss2/forestBossIdle-Sheet.png" id="9_ds0p6"]
[ext_resource type="Texture2D" uid="uid://dive1xhmvonuo" path="res://art/boss/boss2/piano.png" id="10_ag07u"]

[sub_resource type="SpriteFrames" id="SpriteFrames_r60uj"]

[sub_resource type="Environment" id="Environment_uxruc"]
background_mode = 3
glow_enabled = true
glow_blend_mode = 1

[sub_resource type="SpriteFrames" id="SpriteFrames_u63wg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_r60uj")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ag07u"]
atlas = ExtResource("9_ds0p6")
region = Rect2(0, 0, 14, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_maa72"]
atlas = ExtResource("9_ds0p6")
region = Rect2(14, 0, 14, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_eapun"]
atlas = ExtResource("9_ds0p6")
region = Rect2(28, 0, 14, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtn3c"]
atlas = ExtResource("9_ds0p6")
region = Rect2(42, 0, 14, 29)

[sub_resource type="SpriteFrames" id="SpriteFrames_ghl1p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag07u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_maa72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eapun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtn3c")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[node name="TestScene" type="Node2D"]
script = ExtResource("1_u63wg")
metadata/_edit_vertical_guides_ = [-543.0, 543.0, -5.0]
metadata/_edit_horizontal_guides_ = [-305.0, 305.0]

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(1, 1.00329)
texture = ExtResource("2_4m670")

[node name="KeyListener" parent="." instance=ExtResource("2_q2to2")]
position = Vector2(-132, 280)
key_name = "left"

[node name="KeyListener2" parent="." instance=ExtResource("2_q2to2")]
position = Vector2(0, 280)
frame = 1
key_name = "down"

[node name="KeyListener3" parent="." instance=ExtResource("2_q2to2")]
position = Vector2(132, 280)
frame = 3
key_name = "right"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.59, 0.59)

[node name="Boss" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r60uj")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_uxruc")

[node name="LevelEditor" parent="." instance=ExtResource("6_n5cy7")]
position = Vector2(-652, 22)

[node name="Player" type="AnimatedSprite2D" parent="." groups=["player"]]
position = Vector2(-234, 195)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_u63wg")
animation = &"Idle"
script = ExtResource("3_uxruc")

[node name="Boss2Ui" parent="Player" instance=ExtResource("4_n5cy7")]
offset_left = -73.0
offset_top = -114.75
offset_right = -72.0
offset_bottom = -164.75

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="game_ui" parent="UILayer" instance=ExtResource("7_u63wg")]
offset_left = -3.0
offset_top = -3.0
offset_right = -3.0
offset_bottom = -3.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(377, 198)
scale = Vector2(3.83145, 4.08638)
sprite_frames = SubResource("SpriteFrames_ghl1p")
animation = &"Idle"

[node name="Piano" type="Sprite2D" parent="."]
position = Vector2(266, 221)
scale = Vector2(1.42188, 1.32031)
texture = ExtResource("10_ag07u")
